<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="50dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/logo_vertical_width"
                android:layout_height="@dimen/logo_vertical_height"
                android:layout_gravity="center"
                android:src="@drawable/logo_adi"
                android:contentDescription="@string/icon"
                android:layout_marginBottom="30dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/ErrorText"
                android:paddingBottom="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/ErrorText"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textSize="16sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="14dp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum punya akun? "
                    android:paddingVertical="10dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:id="@+id/btn_go_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:paddingVertical="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



        <androidx.appcompat.widget.AppCompatButton
            android:clickable="true"
            android:id="@+id/btn_login"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold"
            android:focusable="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:enabled="true"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>



</RelativeLayout>