<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_pengaturan"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        />

    <LinearLayout
        android:layout_below="@id/tb_pengaturan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:id="@+id/btn_edit_profile"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_button_white"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_ubah_password"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_button_white"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_password"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_logout"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_button_white"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginLeft="3dp"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>